# claude-zephyr

./: .env.example  .env.example.instcopilot  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  RELEASE_PROCESS.md  SECURITY.md  build.sh  config-en.toml.example  config.toml.example  config.toml.example.instcopilot  config.toml.template  monitor-logs.sh  watch-logs.sh
.cargo/: config.toml
.claude/commands/: pre-commit-check.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: pre-commit  setup-hooks.sh  watch-logs.sh
src/: config.rs  connection_manager.rs  connection_tracker.rs  dashboard.rs  dynamic_health.rs  events.rs  health.rs  health_orchestrator.rs  i18n.rs  logging.rs  main.rs  migration_adapter.rs  proxy.rs  signal_handler.rs  state_manager.rs
src/dev_tools/: mod.rs  test_timing.rs
