[package]
name = "claude-zephyr"
version = "0.1.0"
edition = "2021"
description = "Automatic endpoint switching for Claude API"
license = "MIT"
repository = "https://github.com/your-username/claude-zephyr"
readme = "README.md"
keywords = ["claude", "api", "proxy", "load-balancer", "endpoint"]
categories = ["network-programming", "web-programming"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.0"
toml = "0.8"
futures = "0.3"
ratatui = "0.24"
crossterm = "0.27"
tokio-util = "0.7"
dotenv = "0.15"
